--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node index.js"
   },
   "author": "Spewks",
   "license": "ISC",
@@ -13,11 +13,9 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^3.2.2-3",
     "ffmpeg-static": "^4.1.0",
-    "node-fetch": "^2.6.0",
     "node-gyp": "^6.1.0",
     "node-opus": "^0.3.3",
     "prism-media": "^1.2.1",
-    "random-puppy": "^1.1.0",
     "ytdl-core": "^2.0.1",
     "ytdl-core-discord": "^1.1.0",
     "ytsr": "^0.1.12"
