--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Spewks",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "prism-media": "^1.2.1",
     "ytdl-core": "^2.0.1",
     "ytdl-core-discord": "^1.1.0",
+    "ytdl-getinfo": "^1.1.0",
     "ytsr": "^0.1.12"
   },
   "devDependencies": {},
